# MoldWing

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  Claude.md  imgui.ini  vcpkg.json
.serena/: project.yml
Apps/: CMakeLists.txt
Apps/01_HelloWorld/: CMakeLists.txt
Apps/02_ImGuiBasic/: CMakeLists.txt  main.cpp
Apps/02_ImGuiBasic/shaders/: cube.vert
Apps/03_RotatingCube/: CMakeLists.txt  main.cpp
Apps/04_CameraControl/: CMakeLists.txt  README.md  main.cpp
Apps/05_ModelDemo/: CMakeLists.txt  PLAN.md  TextureLoader.cpp  TextureLoader.h  main.cpp
Apps/05_ModelDemo/assets/textures/: generate_texture.py
Apps/05_ModelDemo/shaders/: model.vert
Apps/06_RayPicking/: CMakeLists.txt  main.cpp
Apps/CubeDemo/: CMakeLists.txt
Apps/HelloTriangle/: CMakeLists.txt
Apps/HelloTriangle/src/: HelloTriangle.cpp  HelloTriangle.hpp
Apps/MoldWing/: CMakeLists.txt
Apps/MoldWing/src/: ExportDialog.cpp  ExportDialog.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
Apps/MoldWing/src/Commands/: CommandBase.hpp
Apps/MoldWing/src/Core/: CompositeId.hpp  Logger.cpp  Logger.hpp  Material.hpp  MeshData.cpp  MeshData.hpp  RayIntersection.hpp  TextureData.hpp
Apps/MoldWing/src/IO/: CoordinateSystem.cpp  CoordinateSystem.hpp  MeshExporter.cpp  MeshExporter.hpp  MeshLoader.cpp  MeshLoader.hpp  OSGBExporter.cpp  OSGBExporter.hpp
Apps/MoldWing/src/Render/: BrushCursorRenderer.cpp  BrushCursorRenderer.hpp  CameraSettings.hpp  DiligentWidget.cpp  DiligentWidget.hpp  LassoRenderer.cpp  LassoRenderer.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OrbitCamera.cpp  OrbitCamera.hpp  PivotIndicator.cpp  PivotIndicator.hpp  SelectionBoxRenderer.cpp  SelectionBoxRenderer.hpp
Apps/MoldWing/src/Selection/: FacePicker.cpp  FacePicker.hpp  SelectionRenderer.cpp  SelectionRenderer.hpp  SelectionSystem.cpp  SelectionSystem.hpp
Apps/MoldWing/src/Texture/: ScreenToTextureMapper.cpp  ScreenToTextureMapper.hpp  TextureEditBuffer.cpp  TextureEditBuffer.hpp  TextureEditCommand.cpp  TextureEditCommand.hpp  TextureEditMode.cpp  TextureEditMode.hpp  TextureEditTool.cpp  TextureEditTool.hpp
Apps/MoldWing/src/UI/: OSGBExportDialog.cpp  OSGBExportDialog.hpp
Apps/VulkanDemo/: CMakeLists.txt  main.cpp
Apps/VulkanDemo/shaders/: shader.vert
CMakeModules/: compile-shaders.cmake  spv_to_header.py
Docs/: MoldWing-Development-Plan.md  MoldWing-Task-Breakdown.md  generate_texture_edit_doc.py  research_realtime_texture_editing_2025-12-30.md
Docs/plans/: 2025-12-24-ray-picking-design.md
Modules/: CMakeLists.txt
Modules/MoldWing/: CMakeLists.txt
Modules/MoldWing/Mesh/: CMakeLists.txt
Modules/MoldWing/Mesh/include/MoldWing/Mesh/: Mesh.h
Modules/MoldWing/Mesh/src/: Mesh.cpp
Modules/MoldWing/Shaders/: CMakeLists.txt
Modules/MoldWing/Shaders/shaders/: cube_instanced.frag  cube_instanced.vert  model.frag  raypick.comp  shader.frag
Modules/MoldWing/VulkanEngine/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  CommandBufferManager.cpp  CommandBufferManager.h  Device.cpp  Device.h  Engine.cpp  Engine.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.h  Instance.cpp  Instance.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  TextureLoader.cpp  TextureLoader.h
Modules/MoldWing/VulkanEngine/src/: Image.cpp
Modules/MyLibs/: CMakeLists.txt
Modules/MyLibs/VulkanEngine/: CommandBufferManager.cpp  Device.cpp  Engine.cpp  Export.h.in  Instance.cpp  Instance.h  RenderPass.cpp  Swapchain.cpp  Swapchain.h
